# noaa-spec

./: .dockerignore  .gitignore  AGENTS.md  ARCHITECTURE_NEXT_STEPS.md  CHANGELOG.md  CITATION.cff  CLEANING_RECOMMENDATIONS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile  NEXT_STEPS.md  NOAA_CLEANING_ALIGNMENT_REPORT.md  README.md  REPO_CLEANUP_AUDIT.md  REPO_PUBLICATION_CLEANUP_AUDIT.md  REPRODUCIBILITY.md  RULE_PROVENANCE_LEDGER.md  SPEC_COVERAGE_REPORT.md  UNDOCUMENTED_RULES_REVIEW.md  check_station_sync.py  monitor_latest_build.py  pyproject.toml  requirements-review.txt  rerun_stations.py
.github/: copilot-instructions.md
docs/: ARTIFACT_BOUNDARY_POLICY.md  CLEANING_RUN_MODES.md  CURRENT_PROJECT_STATE.md  DOMAIN_DATASET_REGISTRY.md  LOCAL_DEV.md  PARSER_ENGINEERING_GUARDS.md  PIPELINE_DESIGN_RATIONALE.md  PIPELINE_VALIDATION_PLAN.md  QUICKSTART.md  README.md  REPO_CLEANUP_RECOMMENDATIONS.md  REPO_FOLDER_STRUCTURE_REPORT.md  REVIEWER_GUIDE.md  UNDERSTANDING_OUTPUT.md  UNSPECIFIED_RULES_ANALYSIS.md  evidence_matrix.md  first_output_guide.md  reviewer_cleaning_examples.md  rule_provenance.md  schema.md  supported_fields.md  validation_100_station.md
examples/: README.md  download_and_clean_station.py  pandas_vs_noaa_spec.py  run_minimal_cleaning.py
isd-format-document-parts/: isd-format-document.deterministic.md
maintainer/: README.md
paper/: README.md  paper-preview.html  paper.bib  paper.md
release/: README.md
reproducibility/: FIXTURE_PROVENANCE.md  README.md  REAL_PROVENANCE_EXAMPLE.md  TRACEABLE_FIXTURES.md  checksums.sha256  environment.txt  run_pipeline_example.py  sample_station_cleaned.csv
scripts/: __init__.py  audit_build.py  check_reviewer_env.sh  check_station_sync.py  convert_output_raw_csv_to_parquet.py  (+8 more)
(+480 files in other folders)
