[project]
name = "noaa-spec"
version = "0.1.0"
description = ""
authors = [
    {name = "Balaji Kesavan",email = "balajikesavan29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.0,<4.0.0)",
    "pyarrow (>=16.0.0,<17.0.0)",
    "requests (>=2.32.0,<3.0.0)",
    "beautifulsoup4 (>=4.12.0,<5.0.0)",
    "lxml (>=5.2.0,<6.0.0)",
    "pypdf (>=5.9.0,<6.0.0)"
]

[project.scripts]
noaa-spec = "noaa_spec.cli:main"


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
packages = [{ include = "noaa_spec", from = "src" }]

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pytest-cov (>=5.0.0,<6.0.0)",
]
