[project]
name = "noaa-spec"
version = "1.0.0"
description = "Deterministic cleaning for NOAA ISD / Global Hourly observations with stable observation-level output semantics."
authors = [
    {name = "Balaji Kesavan",email = "balajikesavan29@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "pandas>=3.0.0,<4.0.0",
    "pyarrow>=16.0.0,<17.0.0",
]

[project.optional-dependencies]
fetch = [
    "requests>=2.32.0,<3.0.0",
]
reports = [
    "beautifulsoup4>=4.12.0,<5.0.0",
    "lxml>=5.2.0,<6.0.0",
    "pypdf>=5.9.0,<6.0.0",
]

[project.scripts]
noaa-spec = "noaa_spec.cli:main"

[build-system]
requires = ["setuptools==80.10.2", "wheel==0.46.3"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[dependency-groups]
dev = [
    "pytest>=9.0.2,<10.0.0",
    "pytest-cov>=5.0.0,<6.0.0",
]
